--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,28 @@
+#spring.application.name=backend
+##port
+#server.port=8081
+#
+##database connection
+#spring.datasource.url=jdbc:mysql://localhost:3306/visitly_db
+#spring.datasource.username=root
+#spring.datasource.password=Abu3Abu3@
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.app.jwtSecret=mysecret123abckdhweoifohadsfohweuihfaajhf4521985967
+#spring.app.jwtExpiration=30000000
+
 spring.application.name=backend
 #port
 server.port=8081
 
 #database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/visitly_db
+spring.datasource.url=jdbc:mysql://root:kgTAidRxIRbkPqDaxODkMPxUavDLRICK@junction.proxy.rlwy.net:12202/railway
 spring.datasource.username=root
-spring.datasource.password=Abu3Abu3@
+spring.datasource.password=kgTAidRxIRbkPqDaxODkMPxUavDLRICK
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.app.jwtSecret=mysecret123abckdhweoifohadsfohweuihfaajhf4521985967
 spring.app.jwtExpiration=30000000
+
