--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.application.name=backend
 server.port=8081
 
 #database connection
-spring.datasource.url=jdbc:mysql://root:kgTAidRxIRbkPqDaxODkMPxUavDLRICK@junction.proxy.rlwy.net:12202/railway
+spring.datasource.url=jdbc:mysql://root:xshjchpawBeepNFWjeUvDxCbasQpwgqF@roundhouse.proxy.rlwy.net:13211/railway
 spring.datasource.username=root
-spring.datasource.password=kgTAidRxIRbkPqDaxODkMPxUavDLRICK
+spring.datasource.password=xshjchpawBeepNFWjeUvDxCbasQpwgqF
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
